Implementing rendering columns with  ProjectionConstraint in Projection.